# cloudtrail-quickscan

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: investigation-notes.md
samples/: README.md  cloudtrail_sample.json
src/cloudtrail_quickscan/: __init__.py  cli.py  models.py  parser.py  rules.py
tests/: test_cli.py  test_parser.py  test_rules.py
