[project]
name = "cloudtrail-quickscan"
version = "0.1.0"
description = "Small CloudTrail log checker for blue team practice"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Haitao Zheng" }]

[project.scripts]
cloudtrail-quickscan = "cloudtrail_quickscan.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
